<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_sticky"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:elevation="10dp"
        android:alpha="0"
        android:layout_height="110dp" />
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/viewpager_1" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/viewpager_2" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/recyclerview_1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_1"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:tag="@string/recyclerview_1"
                android:layout_marginTop="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/viewpager_3" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/recyclerview_2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="16dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/viewpager_4" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_4"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/recyclerview_3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>