<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true">

        <FrameLayout
            android:id="@+id/fl_claim_offer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.65"
                    android:visibility="visible"
                    app:cardPreventCornerOverlap="true">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorAccent" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".35">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:visibility="gone"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/you_have_claimed" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="8dp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_claim_offer_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:text="@string/breakfast_combo"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_claim_offer_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_200_rs_only"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:visibility="gone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/offer_valid_till_14th_april_2020"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_claim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/shape_claim_btn"
                        android:text="@string/claim" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:visibility="gone"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight=".15"
                    android:gravity="bottom">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/offer_added_to_your_account"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>